--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,8 +5,7 @@ parserOptions:
   sourceType: "module"
 
 env:
-  es2017: true
   browser: true
 
 extends:
-  "htmlacademy/vanilla"
+  "htmlacademy/es6"
