--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "devDependencies": {
     "eslint": "6.1.0",
     "eslint-config-htmlacademy": "0.5.2",
+    "moment-locales-webpack-plugin": "1.2.0",
     "webpack": "5.65.0",
     "webpack-cli": "4.9.1",
     "webpack-dev-server": "4.6.0"
   },
   "engines": {
     "node": "10"
+  },
+  "dependencies": {
+    "moment": "2.29.1"
   }
 }
