--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "node": "10"
   },
   "dependencies": {
+    "chart.js": "2.9.4",
+    "chartjs-plugin-datalabels": "1.0.0",
+    "he": "1.2.0",
     "moment": "2.29.1"
   }
 }
